--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="middle-section">
-                <form method="GET" action="{% url 'search_items_guest' %}">
+                <form method="GET" action="{% url 'search_items_admin' %}">
                     <input class="search-bar" type="text" placeholder="Search for name/id/category" name="q" value="{{ query }}">
                     <input class="search-button" type="submit" value="Search">
                 </form>
@@ -98,6 +98,7 @@
 
                 </div>
                 
+
             </div>
 
         </div>
