--- a/static/userprofile/editprofile.css
+++ b/static/userprofile/editprofile.css
@@ -107,72 +107,195 @@ html{
     background: #eee;
  }
  
- .header{
-    background-color: #7a1a22;
-    height: 100px;;
-    width: 1450px;
-    flex-grow: 1;
+ .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(113,26,33);
+    padding: 5px;
+    border-bottom: 20px solid rgb(230,124,55);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+  
+  .left-section {
+    width: 100px;
     display: flex;
     align-items: center;
- }
-     
- .head{
-    display: flex;
-    background-color:#E67C37;
-    padding: 10px;
-    width: 1430px;
- }
-     
- .header .logo-left img{
-    width: 135px;
-    padding: 2rem;
- }
-    
- .header .logo-right img{
-    width: 95px;
-    padding: 6rem;
- }
- 
- /*navigations*/
- nav{
-    background-color: #f8f9fa;
-    padding: 15px 0;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
-    border-radius: 15px;
- }
- 
- .navbar-brand {
-    color: black;
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin-right: 10px;
     margin-left: 10px;
-    padding: 3rem;
-    text-decoration: none; /* Remove underline */
-    position: relative; /* Position for the pseudo-element */
-    transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
- }
- 
- /* Add hover effect */
- .navbar-brand:hover {
-    color:firebrick; /* Change text color on hover */
-    font-weight: lighter; /* Change font weight on hover, adjust as needed */
- }
- 
- .navbar-brand:hover::before {
-    visibility: visible;
-    transform: scaleX(1); /* Make the underline visible and scale it */
- }
- 
+    flex-shrink: 0;
+  }
+  
+  .lspu-logo{
+    width: 90px;
+    border-radius:50px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .middle-section {
+    flex: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .search-form {
+    display: flex;
+    flex: 1;
+    align-items: center;
+  }
+  
+  .search-bar {
+    flex: 1;
+    height: 14px;
+    padding: 10px;
+    margin: 5px;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    background-color: white;
+    color: #000000; 
+    font-size: 15px;
+    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+    width: 0;
+  }
+  
+  .search-bar::placeholder {
+    font-family: Arial, Helvetica, sans-serif!important;
+    font-size: 15px!important;
+  }
+  
+  .search-button {
+    background-color: rgb(230, 124, 55)!important;
+    color: #ffffff!important;
+    padding: 10px 15px!important;
+    border-radius: 3px!important;
+    cursor: pointer!important;
+    margin-right: 10px!important;
+    border: none;
+    width: 100px;
+    height: 43px;
+    margin-bottom: 0!important;
+  }
+  
+  .search-button:hover {
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2)!important;
+  }
+  
+  
+  form {
+    display: flex;
+    flex: 1;
+    align-items: center;
+  }
+  
+  
+  .right-section {
+    width: 100px;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    flex-shrink: 0;
+  }
+  
+  .ccs-logo{
+    width: 92px;
+    border-radius:46px;
+  }
+  
+  .head {
+    display: flex;
+    background-color: orange;
+    padding: 10px;
+  }
+  
+  .middle-section {
+    flex: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+  }
+  
+    
+  .buttons-box {
+    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    padding-top: 3px;
+    padding-bottom: 3px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); 
+    margin-top: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 5px;
+  }
+  
+  .button-grid{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 5px;
+    flex-wrap: wrap;
+    align-content: first baseline;
+    gap: 1em;
+  }
+  
+  .buttons-tabs {
+    background-color: rgb(255,255,255);
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    vertical-align: top;
+    transition-duration: 0.4s;
+  }
+    
+  .buttons-tabs:hover  {
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+  }
+  
+  .buttons-tabs:active {
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+  }
+  
+  a{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    font-family: Arial;
+  }
+  
+  a:link { 
+    text-decoration: none; 
+  } 
+  
+  a:hover { 
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+  } 
+  
+  a:active { 
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+  } 
 .form{
     background-color: #f8f9fa;
     padding: 5rem 0;
     border: 2px solid #dee2e6;
     border-bottom: 1px solid #dee2e6;
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+    margin: 30px 70px 0; 
     border-radius: 15px;
 }
 
