--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -2,46 +2,51 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'unreturned/unreturnedadminstyle.css' %}">
+        <link rel="stylesheet" href="{% static 'unreturned/unreturnedstyle.css' %}">
         <link rel="stylesheet" href="{% static 'unreturned/pop_up_form.css' %}">
-        <title>ADMIN UNRETURNED</title>
+        <title>UNRETURNED</title>
     </head>
 
     <script defer src="{% static 'unreturned/buttons_for_unreturned.js' %}"></script>
 
     <body>
-        <header>
-            <div class="logo left">
-                <img src="static/unreturned/unreturnedadmin/LSPU.png" alt="Left Logo">
+        <div class="header">
+            
+            <div class="left-section">
+                <img class="lspu-logo" src="{% static 'home/logo/lspu-logo.png' %}">
             </div>
+            
             <div class="middle-section">
-                <form method="GET" action="{% url 'search_items_admin' %}" class="search-form">
-                    <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
-                    <input class="search-button" type="submit" value="Search" name="b">
+                <form method="GET" action="{% url 'search_items' %}">
+                    <input class="search-bar" type="text" placeholder="Search for name/id/category" name="q" value="{{ query }}">
+                    <input class="search-button" type="submit" value="Search">
                 </form>
             </div>
-            <div class="logo right">
-                <img src="static/unreturned/unreturnedadmin/CSS.png" alt="Right Logo">
-            </div>
-        </header>
+
+             <div class="right-section">
+                 <img class="ccs-logo" src="{% static 'home/logo/ccs-logo.jpg' %}" >
+             </div>
+        
+         </div>
+    
+
         <div class="head"></div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
-                    <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
-                    <a href="{% url 'admin_unreturned' %}" class="navbar-brand">Unreturned</a>
-                    <a href="{% url 'members' %}" class="navbar-brand">Members</a>
-                    <a href="{% url 'admin_userprofile' %}" class="navbar-brand">Account</a>
-                    <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+         
+            <div class="buttons-box">
+                <div class="button-grid">
+                    <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
+                    <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+                    <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
+                    <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
+                    <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
+                    <a href="{% url 'logout' %}" class="buttons-tabs">Logout</a>
+                </div>
             </div>
-        </nav>
-        </div>
 
         <div id="mainForm" class="form">
         <div id="container" class="rounded_corners">
 
-            <!-- test block code -->
-            <!-- template for the items -->
+
             {% for item in unreturned_items reversed %}
             <div id="wrapper">
 
@@ -79,7 +84,6 @@
                 <div class="recent-lines">
                     <div id="btn_con">
                         <button id="return_btn" class="rounded_corners" onclick="show_hide_pop_up()">Return</button>
-                        <!-- <a href="{% url 'admin_return_item' item.id item.item_borrowed.item_stock.id item.item_borrowed.borrow_form_id %}">Return</a></button> -->
                     </div>
                 </div>
             </div>
@@ -100,7 +104,6 @@
 
                     <div class="btn_section">
 
-                        <!-- <button onclick="show_hide_pop_up()">Cancel</button> -->
                         <input type="button" value="Cancel" onclick="show_hide_pop_up()">
                         <input type="submit" name="return" value="Return">
 
@@ -110,7 +113,6 @@
 
             </div>
             {% endfor %}
-            <!-- template for the items -->
         {% include 'home/result_list_admin.html' %}
 
     </div>
